--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         <button class="rstBtn hide">Reset Game</button>
       </div>
     </main>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
