--- a/index.html
+++ b/index.html
@@ -1,43 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <h1>Tic Tac Toe</h1>
-    <div class="newGame">
-      <button class="newGameBtn">New Game</button>
-    </div>
-    <div class="msg_box">
-      <p id="msg"></p>
-    </div>
-    <main>
-      <div class="playerNames hide">
-        <div>Player 1</div>
-      </div>
-      <div class="game hide">
-        <div class="game_container">
-          <button class="game_box"></button>
-          <button class="game_box"></button>
-          <button class="game_box"></button>
-          <button class="game_box"></button>
-          <button class="game_box"></button>
-          <button class="game_box"></button>
-          <button class="game_box"></button>
-          <button class="game_box"></button>
-          <button class="game_box"></button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Trendy Tic Tac Toe</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Trendy Tic Tac Toe</h1>
+        <div class="player-form">
+            <label for="player1">Player 1 Name:</label>
+            <input type="text" id="player1" placeholder="Enter your name">
+            <label for="player2">Player 2 Name:</label>
+            <input type="text" id="player2" placeholder="Enter your name">
+            <label for="symbol">Choose your symbol:</label>
+            <select id="symbol">
+                <option value="X">X</option>
+                <option value="O">O</option>
+            </select>
+            <button id="start-btn">Start Game</button>
         </div>
-      </div>
-      <div class="playerNames hide">
-        <div>Player 2</div>
-      </div>
-      <div class="rstGame">
-        <button class="rstBtn hide">Reset Game</button>
-      </div>
-    </main>
-    <script src="app.js"></script>
-  </body>
+        <div class="game-board">
+            <!-- Game board will be generated dynamically using JavaScript -->
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
